RESOLVED FIXED149765
EXT_texture_filter_anisotropic extension exposed with WEBKIT_ prefix
https://bugs.webkit.org/show_bug.cgi?id=149765
Summary EXT_texture_filter_anisotropic extension exposed with WEBKIT_ prefix
Kenneth Russell
Reported 2015-10-02 15:12:43 PDT
The WebGL extension EXT_texture_filter_anisotropic is being exposed in Safari with the name "WEBKIT_EXT_texture_filter_anisotropic". Since this extension's been approved in the extension registry for some time now, the prefix should be removed. See https://www.khronos.org/registry/webgl/extensions/ . To reproduce: > c = document.createElement('canvas') < <canvas>​ > gl = c.getContext('webgl') < WebGLRenderingContext > gl.getSupportedExtensions() < ["OES_texture_float", "OES_texture_float_linear", "OES_texture_half_float", "OES_texture_half_float_linear", "OES_standard_derivatives", "EXT_shader_texture_lod", "WEBKIT_EXT_texture_filter_anisotropic", "OES_vertex_array_object", "OES_element_index_uint", "WEBGL_lose_context", "WEBGL_compressed_texture_s3tc", "WEBGL_depth_texture", "ANGLE_instanced_arrays"]
Attachments
Patch (6.83 KB, patch)
2015-10-05 18:00 PDT, Dean Jackson
bdakin: review+
Radar WebKit Bug Importer
Comment 1 2015-10-05 17:51:15 PDT
Dean Jackson
Comment 2 2015-10-05 18:00:24 PDT
Dean Jackson
Comment 3 2015-10-05 18:06:56 PDT
Note You need to log in before you can comment on or make changes to this bug.