EXT_texture_filter_anisotropic extension exposed with WEBKIT_ prefix https://bugs.webkit.org/show_bug.cgi?id=149765 <rdar://problem/22983722>

Reviewed by Beth Dakin.

Source/WebCore:

We can now remove the WEBKIT_ prefix from this extension.

Test: fast/canvas/webgl/unprefixed-anisotropic-extension.html

* html/canvas/WebGL2RenderingContext.cpp: Support the prefixed and unprefixed form.
(WebCore::WebGL2RenderingContext::getExtension):
* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::getExtension):
(WebCore::WebGLRenderingContext::getSupportedExtensions):

LayoutTests:

Simple test that the unprefixed form exists. The actual functionality
is exercised in the WebGL conformance tests.

* fast/canvas/webgl/unprefixed-anisotropic-extension-expected.txt: Added.
* fast/canvas/webgl/unprefixed-anisotropic-extension.html: Added.

Canonical link: https://commits.webkit.org/167943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190595 268f45cc-cd09-0410-ab3c-d52691b4dbfc